trying to fix on iphone the select of event type

--- a/Components/Form/formFooter.module.scss
+++ b/Components/Form/formFooter.module.scss
@@ -22,6 +22,9 @@
     }
     .inputWithIconWrapper {
       position: relative;
+      select {
+        margin-right: 10px;
+      }
       i {
         position: absolute;
         top: 50%;
